2005-09-20  James Henstridge  <james@jamesh.id.au>

	* configure.in: bump version to 2.12.0

	* macros2/gnome-autogen.sh (configure_files): when searching for
	configure.in files, skip directories starting with a dot.  This
	avoids Bzr, Quilt and Subversion bookkeeping directories among
	others.  Fixes bug #311951.

2005-08-17  Stepan Kasal  <kasal@ucw.cz>

	* macros2/gnome-autogen.sh (add_to_cm_macrodirs): New function,
	prevents duplicates in $cm_macrodirs.
	(check_m4macros): Use it.  Read the dirlist file, if it is supported
	by the version of Automake actually in use.

2005-08-17  Stepan Kasal  <kasal@ucw.cz>

	* macros2/gnome-autogen.sh (version_check): Set $variable_VERSION
	  to the actual version number of the tool.

2005-08-17  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-autogen.sh: pass --force to gnome-doc-prepare to
	match other tools.  Fixes bug #311775.

	* macros2/gnome-autogen.sh: don't use syntax that non-GNU greps
	don't understand.  Fixes bug #313531.

2005-08-16  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-autogen.sh: add checks for gnome-common macro
	names, and call require_m4macro for the appropriate names.  This
	can help detect $ACLOCAL_FLAGS problems earlier.  Addresses bug
	#312125.

2005-07-25  James Henstridge  <james@jamesh.id.au>

	* configure.in: bump release number.

2005-07-19  Shaun McCance  <shaunm@gnome.org>

	* macros2/gnome-autogen.sh:
	- Bumped up the default required version of gnome-doc-utils

2005-07-18  Christian Persch  <chpe@cvs.gnome.org>

	* macros2/gnome-autogen.sh:

	When configure.{in,ac} contains GNOME_DOC_INIT, actually call
	gnome-doc-prepare.

2005-03-21  Sven Herzberg  <herzi@gnome-de.org>

	* macros2/gnome-autogen.sh: added support for the gnome-doc-utils

2005-03-15  Stepan Kasal  <kasal@ucw.cz>

	* macros2/ChangeLog: Removed; the contents merged into the main one.

2005-02-11  James Henstridge  <james@jamesh.id.au>
